--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,59 +6,31 @@
     <title>Event List Manager</title>
     <style>
       /* Add your CSS styling here */
+      body {
+        font-family: Arial, sans-serif;
+      }
+
+      table {
+        width: 100%;
+        border-collapse: collapse;
+      }
+
+      th,
+      td {
+        text-align: left;
+        padding: 8px;
+        border-bottom: 1px solid #ddd;
+      }
+
+      th {
+        background-color: #f2f2f2;
+      }
+
       .event-form {
         margin-bottom: 20px;
       }
 
-      .event-list-container {
-        margin-top: 20px;
-        display: flex;
-        flex-direction: column;
-      }
-
-      .event-header,
-      .event {
-        display: flex;
-        justify-content: space-between;
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        margin-bottom: 10px;
-      }
-
-      .event-header {
-        background-color: #f0f0f0;
-        font-weight: bold;
-      }
-
-      .event__info,
-      .event__actions {
-        display: flex;
-        align-items: center;
-      }
-
-      .event__info > span,
-      .event__actions > button {
-        margin: 0 10px;
-      }
-
-      .event__info > span {
-        min-width: 90px;
-      }
-
-      .event__actions {
-        min-width: 120px;
-      }
-
-      /* Input fields for editing */
-      .event__info > input {
-        margin: 0 10px;
-        display: none; /* Hide inputs initially */
-      }
-
-      /* Button styles */
       .event__actions button {
-        padding: 5px 10px;
         margin-right: 5px;
         cursor: pointer;
       }
@@ -74,17 +46,21 @@
       <input type="date" id="event-end-date" required />
       <button type="submit" id="add-event-btn">Add New Event</button>
     </form>
-    <div class="event-list-container">
-      <div class="event-header">
-        <div>Event</div>
-        <div>Start</div>
-        <div>End</div>
-        <div>Actions</div>
-      </div>
-      <div id="event-list">
-        <!-- Events will be rendered here -->
-      </div>
-    </div>
+
+    <table id="event-list">
+      <thead>
+        <tr>
+          <th>Event</th>
+          <th>Start</th>
+          <th>End</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- Event rows will be inserted here by JavaScript -->
+      </tbody>
+    </table>
+
     <script src="index_event.js"></script>
   </body>
 </html>
