--- a/frontend/index.html
+++ b/frontend/index.html
@@ -89,7 +89,35 @@
         outline: none;
       }
 
-      /* Additional styles can be added here */
+      /* Style the input fields */
+      .event__name-input,
+      .event__start-input,
+      .event__end-input {
+        width: 100%; /* Full width */
+        padding: 10px; /* Comfortable padding inside the inputs */
+        margin: 5px 0; /* Space above and below each input */
+        border: 1px solid #ddd; /* Subtle border */
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Slight shadow for depth */
+        border-radius: 4px; /* Rounded corners */
+        box-sizing: border-box; /* Include padding and border in the width and height */
+      }
+
+      /* Style the placeholder text */
+      .event__name-input::placeholder,
+      .event__start-input::placeholder,
+      .event__end-input::placeholder {
+        color: #aaa; /* Light text color for placeholders */
+      }
+
+      /* Remove the default styling for date inputs */
+      .event__start-input,
+      .event__end-input {
+        -webkit-appearance: none; /* For iOS */
+        -moz-appearance: none; /* For Firefox */
+        appearance: none; /* For modern browsers */
+        background-color: #fff; /* Background color of the input */
+        cursor: pointer; /* Change cursor to indicate this is a clickable field */
+      }
     </style>
   </head>
   <body>
