move css into style.css

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,109 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Event List Manager</title>
-    <style>
-      /* Add your CSS styling here */
-      body {
-        font-family: Arial, sans-serif;
-      }
-
-      table {
-        width: 100%;
-        border-collapse: separate; /* This separates the border of each cell */
-        border-spacing: 0 10px; /* This creates space between rows without affecting columns */
-        table-layout: fixed;
-      }
-
-      th,
-      td {
-        text-align: center;
-        padding: 8px;
-      }
-      td {
-        background-color: #e6e2d3;
-      }
-
-      .event-form {
-        display: flex;
-        justify-content: center; /* Aligns children (the button) horizontally center */
-        margin-bottom: 20px;
-      }
-
-      .table-container {
-        display: flex;
-        justify-content: center; /* Center horizontally */
-        align-items: center; /* Center vertically, if there's enough vertical space */
-        margin: 20px auto; /* Specify the margin around the table container */
-        padding: 20px;
-        border: 4px solid #e6e2d3;
-        border-radius: 1rem;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional shadow for a 'lifted' effect */
-        background-color: white; /* Or any color that fits your design */
-      }
-
-      #event-list {
-        width: 100%; /* Let the table size according to its content */
-        margin: 0;
-      }
-
-      .event__actions button {
-        margin-right: 5px;
-        cursor: pointer;
-      }
-      #add-event-btn,
-      .event__save-new-btn,
-      .event__edit-btn,
-      .event__save-btn {
-        color: #ffffff;
-        background: #008cba;
-        border: none;
-      }
-      .event__cancel-new-btn,
-      .event__del-btn,
-      .event__cancel-btn {
-        color: #ffffff;
-        background: #c94c4c;
-        border: none;
-      }
-
-      /* Set the size of the icons */
-      .event__actions svg {
-        fill: currentColor;
-        width: 24px;
-        height: 24px;
-      }
-
-      #add-event-btn {
-        height: 50px;
-      }
-
-      /* Style to remove focus outline from buttons */
-      button {
-        border-radius: 0.5rem;
-        padding: 8px 16px;
-      }
-      button:focus {
-        outline: none;
-      }
-
-      /* Style the input fields */
-      .event__name-input,
-      .event__start-input,
-      .event__end-input {
-        padding: 10px; /* Comfortable padding inside the inputs */
-        border: 1px solid #ddd; /* Subtle border */
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Slight shadow for depth */
-        border-radius: 4px; /* Rounded corners */
-        box-sizing: border-box; /* Include padding and border in the width and height */
-      }
-
-      /* Style the placeholder text */
-      .event__name-input::placeholder,
-      .event__start-input::placeholder,
-      .event__end-input::placeholder {
-        color: #aaa; /* Light text color for placeholders */
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <form class="event-form" id="new-event-form">
